# Vertebone-AI

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json  test_env.py
.github/workflows/: docker-build.yml
server/: app.py  bone_environment.py
